tdf#143213: Fix reading math font settings from file

The order of reading the settings is significant, e.g. if font italic
was read first then font name, font name would set a new font
overriding the italic setting.

We now collect all font settings and apply them at once.

Change-Id: Idb32d7d416607011bc325eff0b73c03b2d12e7d3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/156352
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@libreoffice.org>